inventory relation working in create_db
